[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8,<0.10" ]

[project]
name = "listless"
version = "0.4.1"
description = "generator utils; aka listless"
readme = "README.md"
keywords = [
  "dgpy",
  "generators",
  "itertools",
  "typed",
]

license = { text = "MIT" }
authors = [
  { name = "jesse", email = "jesse@dgi.com" },
]
requires-python = ">=3.11,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [  ]
urls.homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/listless"
urls.repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[dependency-groups]
dev = [
  "pytest>=8.4",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/listless" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
]

[tool.coverage.run]
branch = true
source = [ 'listless' ]
omit = [
  '_meta.py',
]

[tool.coverage.report]
precision = 2
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  '@overload',
  # Re-enable the standard pragma (with extra strictness)
  '# pragma: no cover\b',
  # Code for static type checkers
  'if TYPE_CHECKING:',
  # Scripts
  'if __name__ == .__main__.:',
  'if 0:',
  'pragma: no cover',
  'pragma: nocov',
]
