[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "requires"
version = "0.11.0"
description = "Runtime imports and dependency utils"
readme = "README.md"
keywords = [ "decorator", "dgpy", "funkify", "import", "requires" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [ "funkify>=0.4", "xtyping>=0.5" ]

[dependency-groups]
dev = [
  "python-rapidjson>=1.20",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/requires" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
]
xfail_strict = true
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
  "skip: skip test",
  "anyio: anyio tests",
  "aio: asyncio tests",
  "version",
]

[tool.coverage.run]
source = [ 'requires' ]
branch = true
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool]
