[project]
name = "shellfish"
version = "0.5.1"
description = "shellfish ~ shell & file-system utils"
authors = [{ name = "jesse", email = "jesse@dgi.com" }]
readme = "README.md"
keywords = ["dgpy", "shell", "fs", "filesystem", "typed"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--ignore-glob=*/_meta.py",
  # "--disable-warnings",
]
xfail_strict = true
filterwarnings = [
  "error",
  # 'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
  # "ignore::RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  # "ignore::DeprecationWarning",
  "ignore:unclosed transport <_ProactorSocketTransport.*:ResourceWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
  "aio",
  "asyncio",
]

[tool.coverage.run]
source = ['shellfish']
context = '${CONTEXT}'
omit = ["**/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shellfish"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.uv]
dev-dependencies = [
  "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
