[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "shellfish"
version = "0.6.0"
description = "shellfish ~ shell & file-system utils"
readme = "README.md"
keywords = [ "dgpy", "filesystem", "fs", "shell", "typed" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "aiopen>=0.5",
  "asyncify>=0.9.1",
  "funkify>=0.4",
  "jsonbourne>=0.29",
  "listless>=0.1",
  "pydantic>=2.0.3",
  "xtyping>=0.6",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/shellfish" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--ignore-glob=*/_meta.py",
  # "--disable-warnings",
]
xfail_strict = true
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
  "aio",
  "asyncio",
]

[tool.coverage.run]
source = [ 'shellfish' ]
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool]

[tool.uv]
dev-dependencies = [
  "pytest-asyncio>=0.23.8",
]
