[project]
name = "xtyping"
version = "0.8.2"
description = "xtyping = typing + typing_extensions"
authors = [{name = "jesse",email = "jesse@dgi.com"}]
readme = "README.md"
keywords = ["typing", "dgpy", "typed", "types"]
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Typing :: Typed"]
dependencies = ["typing-extensions>=4.4.0", "annotated-types>=0.5.0"]
requires-python = ">=3.8,<4.0"

[project.urls]
Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/xtyping"
Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool]
[tool.coverage.run]
source = ['xtyping']
branch = true
context = '${CONTEXT}'
omit = ["**/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]


[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xtyping"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
